# lmfdb-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  go.mod  pyproject.toml
.github/workflows/: build.yml  release.yml  rust.yml
cmd/lmfdb/: main.go
docs/: API.md  API.zh-CN.md  GUIDE.md  GUIDE.zh-CN.md  INDEX.md  TODO.md
lmfdb_cli/: client.py
lmfdb_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lmfdb_cli/shell_completions/bash/: lmfdb
share/lmfdb_cli/: __init__.py  main.py
share/lmfdb_cli/shell_completions/fish/: lmfdb.fish
share/lmfdb_cli/shell_completions/zsh/: _lmfdb
src/: cli.rs  color.rs  main.rs  output.rs  query.rs
