[package]
name = "lmfdb-cli"
version = "1.3.2"
edition = "2021"
rust-version = "1.75"
description = "Command-line tool for querying the LMFDB (L-Functions and Modular Forms Database)"
license = "MIT"
repository = "https://github.com/FrankieeW/lmfdb-cli"
default-run = "lmfdb"

[[bin]]
name = "lmfdb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
csv = "1.3"
anyhow = "1.0"
url = "2.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
