[project]
name = "lmfdb-cli"
version = "1.2.0"
description = "CLI tool for querying LMFDB (L-Functions and Modular Forms Database)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Frankie F.-C. WANG", email = "maths@frankie.wang"}
]
license = {text = "MIT"}
keywords = ["lmfdb", "mathematics", "number-theory", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
lmfdb = "lmfdb_cli.main:app"

[project.urls]
Homepage = "https://github.com/FrankieeW/lmfdb-cli"
Repository = "https://github.com/FrankieeW/lmfdb-cli"
Issues = "https://github.com/FrankieeW/lmfdb-cli/issues"

[tool.setuptools.packages.find]
include = ["lmfdb_cli*"]

[tool.setuptools.package-data]
lmfdb_cli = ["shell_completions/**/*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
